--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿/* body {
     text-align: center;
 }
 
@@ -9,4 +9,9 @@ nav {
 .mapsView {
     min-height: 100%;
     height: 100%;
+} */
+
+.mapRow{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
