--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -15,3 +15,17 @@ nav {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.headRow{
+    margin-top: 20px;
+}
+
+.col-md-4{
+    margin-bottom: 10px;
+}
+.col-md-3{
+    margin-bottom: 10px;
+}
+.col-md-2{
+    margin-bottom: 10px;
+}
